--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
+   Adapted
 */
 html,
 body,
@@ -86,8 +87,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -103,9 +102,6 @@ menu,
 nav,
 section {
   display: block;
-}
-body {
-  line-height: 1;
 }
 ol,
 ul {
@@ -128,6 +124,7 @@ table {
 }
 * {
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 body,
 input,
@@ -135,7 +132,6 @@ textarea,
 button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  font-size: 62.5%;
 }
 body {
   -webkit-font-smoothing: antialiased;
