feet(navbar-responsivo):adiciona estrutura responsiva para o navbar & ajusta layout da home

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,10 +1,46 @@
-.header {
+@import '../../styles/breakpoints';
+@import '../../styles/functions';
+
+.navbar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  nav {
-    ul {
-      display: flex;
+  justify-content: space-between;
+  height: 8rem;
+  .logo {
+    font-weight: 600;
+    font-size: 2rem;
+  }
+  ul {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    li {
+      padding: 1rem;
+      border-radius: 0.8rem;
+      a {
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
+      &:hover {
+        cursor: pointer;
+        background: #000;
+        color: white;
+      }
     }
+  }
+  @media (min-width: $xxl) {
+    @include setSpaceToPadding(2rem, 60rem);
+  }
+  @media (min-width: $xl) and (max-width: $xxl) {
+    @include setSpaceToPadding(2rem, 22rem);
+  }
+  @media (min-width: $lg) and (max-width: $xl) {
+    @include setSpaceToPadding(2rem, 20rem);
+  }
+  @media (min-width: $md) and (max-width: $lg) {
+    @include setSpaceToPadding(2rem, 10rem);
+  }
+  @media (max-width: $sm) {
+    @include setSpaceToPadding(2rem, 0);
   }
 }
