--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,26 +1,13 @@
-@import '../../styles/breakpoints';
-@import '../../styles/functions';
-
-.main {
+.wrapperCards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 1.5rem;
 
-  @media (min-width: $xxl) {
-    @include setSpaceToPadding(0.8rem, 20rem);
-  }
-  @media (min-width: $xl) and (max-width: $xxl) {
-    @include setSpaceToPadding(0.8rem, 16rem);
-  }
-  @media (min-width: $lg) and (max-width: $xl) {
-    @include setSpaceToPadding(0.8rem, 12rem);
-  }
-  @media (min-width: $md) and (max-width: $lg) {
-    @include setSpaceToPadding(0, 4rem);
-  }
-  @media (max-width: $sm) {
-    @include setSpaceToPadding(0, 2rem);
+  @media (max-width: 425px) {
+    .wrapperCards {
+      background: magenta;
+    }
   }
 }
