refactory(Navbar):modifica o arquivo de navbar; adiciona imagem logo; modifica index css html e app

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,51 +1,51 @@
-@import '../../styles/breakpoints';
-@import '../../styles/functions';
-
-.navbar {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 8rem;
+  padding-top: 2rem;
+
+  margin-bottom: 8rem;
   .logo {
-    font-weight: 600;
-    font-size: 2rem;
-  }
-  ul {
     display: flex;
     align-items: center;
-    gap: 2rem;
-    li {
-      a {
-        padding: 1rem;
-        border-radius: 0.8rem;
-        border: 1px solid #656665;
-        font-weight: 500;
-        font-size: 1.5rem;
-        &:hover {
-          background: #000;
-          color: white;
+    justify-content: flex-start;
+    span {
+      width: 2rem;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+    img {
+      display: block;
+      height: 3rem;
+    }
+  }
+  .navbar {
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      li {
+        font-size: 1rem;
+        a {
+          padding: 0 0.4rem;
+          position: relative;
+
+          &::after {
+            content: '';
+            width: 0%;
+            height: 1.5px;
+            background: #816797;
+
+            position: absolute;
+            left: 0;
+            bottom: 1px;
+            transition: width 0.2s;
+          }
+          &:hover::after {
+            width: 100%;
+          }
         }
       }
     }
-  }
-
-  @media (min-width: $xxl) {
-    @include setSpaceToPadding(2rem, 60rem);
-  }
-
-  @media (min-width: $xl) and (max-width: $xxl) {
-    @include setSpaceToPadding(2rem, 22rem);
-  }
-
-  @media (min-width: $lg) and (max-width: $xl) {
-    @include setSpaceToPadding(2rem, 20rem);
-  }
-
-  @media (min-width: $md) and (max-width: $lg) {
-    @include setSpaceToPadding(2rem, 10rem);
-  }
-
-  @media (max-width: $sm) {
-    @include setSpaceToPadding(2rem, 0);
   }
 }
