--- a/src/index.css
+++ b/src/index.css
@@ -122,25 +122,36 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/**/
 * {
+  outline: 0;
   box-sizing: border-box;
+}
+body {
+  line-height: 1.5;
   font-size: 62.5%;
+  -webkit-font-smoothing: antialiased;
 }
 body,
 input,
-textarea,
 button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-}
-body {
-  -webkit-font-smoothing: antialiased;
 }
 a,
 a:hover {
   text-decoration: none;
   color: unset;
 }
+ol,
+ul {
+  list-style: none;
+}
 button {
   cursor: pointer;
+}
+#root {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 20px 50px;
 }
