--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,24 @@
 .footer {
-  text-align: center;
-  font-size: 2.5rem;
-  padding: 2rem 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  flex-wrap: wrap;
+
+  height: 6rem;
+  color: #fff;
+  background: #000;
+  .direitos {
+    font-size: 1rem;
+  }
+  .midiaSocial {
+    h3 {
+      font-weight: 500;
+      font-size: 1rem;
+      margin-bottom: 0.8rem;
+    }
+    ul {
+      display: flex;
+      gap: 0.5rem;
+    }
+  }
 }
