--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,9 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1020px;
-  margin: 0 auto;
-  padding: 2rem 20px 50px;
+  padding-top: 1rem;
   .logo {
     display: flex;
     align-items: center;
