--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ button {
   cursor: pointer;
 }
 #root > main {
+  min-height: 100vh;
   max-width: 1020px;
   margin: 0 auto;
   padding: 0 20px 50px;
