--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -8,7 +8,7 @@
     span {
       display: block;
       font-weight: 800;
-      font-size: 48px;
+      font-size: 4.8rem;
       line-height: 130%;
     }
     h2 {
