--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 body,
 input,
 button {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: 400;
 }
 a,
