--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,22 +1,17 @@
+@import '/src/styles/titles';
+
 .landing {
   margin-top: 3rem;
   display: flex;
   gap: 8rem;
   justify-content: space-between;
-  .title {
+  .wrapperText {
     width: 54rem;
-    span {
-      display: block;
-      font-weight: 800;
-      font-size: 4.8rem;
-      line-height: 130%;
+    .title {
+      @include titlePrincipal(4.8rem);
     }
-    h2 {
-      font-style: normal;
-      font-weight: 400;
-      font-size: 2rem;
-      line-height: 130%;
-      margin-top: 1.6rem;
+    .subtitle {
+      @include subtitle();
     }
   }
   img {
@@ -26,15 +21,15 @@
   }
 }
 
-section.cardList {
-  h3 {
-    font-weight: 800;
-    font-size: 3.2rem;
+section.wrapperCard {
+  .titleSection {
+    @include titleSection();
     margin: 2.4rem 0;
   }
-  .wrapper {
+  .boxCards {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem 0;
+    justify-content: space-around;
   }
 }
