--- a/src/pages/Figurinha/Figurinha.module.scss
+++ b/src/pages/Figurinha/Figurinha.module.scss
@@ -1,10 +1,14 @@
 .container {
   display: flex;
-  gap: 4rem;
+  gap: 2rem;
+
+  img {
+    display: block;
+    border-radius: 1rem;
+    height: 30rem;
+  }
 
   .wrapperData {
-    p {
-      font-size: 2.4rem;
-    }
+    font-size: 2.4rem;
   }
 }
