feet(figurinha): adiciona estilo a pagina de detalhes da figurinha

--- a/src/pages/Figurinha/Progressbar/Progressbar.module.scss
+++ b/src/pages/Figurinha/Progressbar/Progressbar.module.scss
@@ -1,16 +1,15 @@
 .progress {
   background-color: #c4c2c2;
   position: relative;
-  margin: 15px 0;
   height: 2.5rem;
-  width: 300px;
-  border-radius: 0.5rem;
+  width: 30rem;
+  border-radius: 0.6rem;
 
   .progressDone {
     background: linear-gradient(to left, #f2709c, #ff9472);
     color: #fff;
     font-size: 1.6rem;
-    border-radius: 0.5rem;
+    border-radius: 0.6rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,4 +18,8 @@
     opacity: 0;
     transition: 1s ease 0.3s;
   }
+}
+.label {
+  font-size: 1.4rem;
+  text-transform: capitalize;
 }
