--- a/src/pages/Figurinha/Figurinha.module.scss
+++ b/src/pages/Figurinha/Figurinha.module.scss
@@ -1,14 +1,47 @@
 .container {
   display: flex;
-  gap: 2rem;
 
   img {
+    border: 1px solid black;
+    padding: 0.2rem;
     display: block;
     border-radius: 1rem;
-    height: 30rem;
+    height: 40rem;
   }
 
   .wrapperData {
-    font-size: 2.4rem;
+    padding: 1rem;
+
+    .title {
+      font-weight: 500;
+      font-size: 3.5rem;
+      line-height: 130%;
+    }
+    .power {
+      margin: 2rem 0;
+      h2 {
+        font-size: 2rem;
+        font-weight: 500;
+        margin-bottom: 1rem;
+      }
+    }
+    .wrapperButton {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 1.2rem;
+
+      .btn {
+        border-radius: 0.6rem;
+        padding: 1rem;
+        font-size: 1.6rem;
+        text-transform: capitalize;
+        background: transparent;
+        &:hover {
+          background: #000;
+          color: #ffff;
+        }
+      }
+    }
   }
 }
