refactoring:realiza ajuste de estilo no navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -30,21 +30,11 @@
         font-size: 2.4rem;
         a {
           padding: 0 0.4rem;
-          position: relative;
-
-          &::after {
-            content: '';
-            width: 0%;
-            height: 1.5px;
-            background: #816797;
-
-            position: absolute;
-            left: 0;
-            bottom: 1px;
-            transition: width 0.2s;
-          }
-          &:hover::after {
-            width: 100%;
+          border-top: 3px solid transparent;
+          border-bottom: 3px solid transparent;
+          transition: ease-in-out 0.3s;
+          &:hover {
+            border-bottom: 3px solid #816797;
           }
         }
       }
