--- a/src/pages/Myleague/Myleague.module.scss
+++ b/src/pages/Myleague/Myleague.module.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/titles';
 
-.title {
+div > p.title {
   @include titlePrincipal(2rem);
   margin-bottom: 3rem;
   text-align: center;
@@ -15,6 +15,21 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    .wrapperText {
+      text-align: center;
+      .title {
+        @include titlePrincipal(3rem);
+      }
+      .subtitleLink,
+      .subtitle {
+        @include subtitle();
+      }
+      .subtitleLink {
+        text-decoration: underline;
+        font-weight: 600;
+      }
+    }
     img {
       border-radius: 1rem;
       display: block;
