--- a/src/pages/Myleague/Myleague.module.scss
+++ b/src/pages/Myleague/Myleague.module.scss
@@ -2,8 +2,9 @@
 
 div > p.title {
   @include titlePrincipal(2rem);
-  margin-bottom: 3rem;
-  text-align: center;
+  margin-top: 3rem;
+  margin-bottom: 2.5rem;
+  text-align: left;
 }
 .wrapper {
   display: flex;
